Fix for datereangepicker. - removed box visible when page was loaded.

--- a/com.getshop.client/ROOT/js/daterangepicker/daterangepicker.css
+++ b/com.getshop.client/ROOT/js/daterangepicker/daterangepicker.css
@@ -1,5 +1,6 @@
 .daterangepicker {
   position: absolute;
+  display: none;
   color: inherit;
   background-color: #f9f9f9;
   width: 100%;
